# LHMY_2.0

./: .cursorignore  .env.example  .flake8  .gitignore  README.md  docker-compose.monitoring.yml  docker-compose.ops.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyrightconfig.json
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  celery_app.py  main.py
backend/scripts/: perf_baseline.py  seed_cms_demo_content.py  seed_website_demo_venues.py  seed_website_external_links.py  seed_website_footer_config.py  seed_website_home_recommended_venues.py
backend/tests/: conftest.py  test_admin_routes_require_admin_static.py  test_audit_coverage_report_render.py  test_audit_logs_timezone_unit.py  test_exception_handler_status_code_mapping.py  test_health.py  test_integration_87_2_service_package_use_redeem_flow.py  test_integration_87_3_enterprise_binding_flow.py  test_integration_account_suspend_blocks_login.py  test_integration_admin_audit_logs_rbac_and_masking.py  test_integration_admin_auth_hardening_task_p0_005.py  test_integration_admin_bookings_list.py  test_integration_admin_cancel_booking.py  test_integration_admin_cancel_booking_idempotency_and_audit.py  test_integration_admin_cms_time_semantics.py  test_integration_admin_dashboard.py  test_integration_admin_dealer_commission_updated_at_z.py  test_integration_admin_dealer_settlements_audit_and_idempotency.py  (+67 more)
docs/: 04-coding-standards.md  05-code-structure.md  06-api-documentation.md  08-database-design.md  09-manual-testing-guide.md  09-testing-checklist.md
nginx/: Dockerfile
scripts/: admin_init_once.py  admin_routes_require_admin_scan.py  audit_coverage_report.py
(+515 files in other folders)
