[project]
name = "lhmy-2-0"
version = "0.1.0"
description = "LHMY 2.0 backend services"
requires-python = ">=3.13"

# 依赖由 uv + pyproject.toml/uv.lock 统一管理（避免双份依赖源）
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "SQLAlchemy[asyncio]==2.0.43",
  "aiomysql==0.2.0",
  "alembic==1.16.5",
  "redis==6.4.0",
  "PyJWT==2.10.1",
  "bcrypt==5.0.0",
  "cryptography>=46.0.3",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "python-multipart>=0.0.21",
  "celery==5.4.0",
  "gb2260>=0.4.1",
  "Markdown==3.7",
  "bleach==6.2.0",
  "pymdown-extensions>=10.19.1",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "hypothesis==6.148.7",
  "black>=25.12.0",
  "flake8>=7.3.0",
  "mypy>=1.19.1",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true


